ci: update build to exclude sketch package (#8736)
* refactor(project): lock node-sass to one version

* ci: update build to exclude sketch package

Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,7 +18,7 @@ jobs:
           command: yarn install --immutable --immutable-cache --check-cache
       - run:
           name: Build packages
-          command: yarn build
+          command: yarn build --ignore '@carbon/sketch'
       - run:
           name: Run Continuous Integration checks
           command: |
