--- a/packages/carbon-react/package.json
+++ b/packages/carbon-react/package.json
@@ -2,7 +2,7 @@
   "name": "@carbon/react",
   "private": true,
   "description": "React components for the Carbon Design System",
-  "version": "0.4.0-rc.0",
+  "version": "0.4.0",
   "license": "Apache-2.0",
   "main": "lib/index.js",
   "module": "es/index.js",
@@ -40,11 +40,11 @@
     "sass": "^1.32.12"
   },
   "dependencies": {
-    "@carbon/feature-flags": "^0.5.0-rc.0",
-    "@carbon/icons-react": "^10.33.0-rc.0",
-    "@carbon/styles": "^0.7.0-rc.0",
+    "@carbon/feature-flags": "^0.5.0",
+    "@carbon/icons-react": "^10.33.0",
+    "@carbon/styles": "^0.7.0",
     "@carbon/telemetry": "0.0.0-alpha.6",
-    "carbon-components-react": "^7.36.0-rc.0"
+    "carbon-components-react": "^7.36.0"
   },
   "devDependencies": {
     "@babel/core": "^7.14.2",
@@ -54,8 +54,8 @@
     "@babel/plugin-transform-react-constant-elements": "^7.13.13",
     "@babel/preset-env": "^7.14.2",
     "@babel/preset-react": "^7.13.13",
-    "@carbon/styles": "^0.7.0-rc.0",
-    "@carbon/themes": "^10.35.0-rc.0",
+    "@carbon/styles": "^0.7.0",
+    "@carbon/themes": "^10.35.0",
     "@rollup/plugin-babel": "^5.3.0",
     "@rollup/plugin-commonjs": "^18.0.0",
     "@rollup/plugin-node-resolve": "^11.2.1",
@@ -67,7 +67,7 @@
     "autoprefixer": "^10.2.5",
     "babel-loader": "^8.2.2",
     "babel-plugin-dev-expression": "^0.2.2",
-    "babel-preset-carbon": "^0.1.0-rc.0",
+    "babel-preset-carbon": "^0.1.0",
     "browserslist-config-carbon": "^10.6.1",
     "css-loader": "^5.2.4",
     "mini-css-extract-plugin": "^1.6.0",
