--- a/packages/upgrade/package.json
+++ b/packages/upgrade/package.json
@@ -30,17 +30,21 @@
     "access": "public"
   },
   "dependencies": {
-    "chalk": "^2.4.2",
-    "change-case": "^4.1.1",
-    "cross-spawn": "^6.0.5",
-    "fast-glob": "^2.2.6",
-    "fs-extra": "^8.1.0",
-    "inquirer": "^6.3.1",
-    "jest-diff": "^23.6.0",
+    "chalk": "^4.1.1",
+    "change-case": "^4.1.2",
+    "cross-spawn": "^7.0.3",
+    "fast-glob": "^3.2.5",
+    "fs-extra": "^10.0.0",
+    "inquirer": "^8.1.0",
+    "jest-diff": "^27.0.2",
     "jscodeshift": "^0.12.0",
     "lodash.clonedeep": "^4.5.0",
+    "lodash.merge": "^4.6.2",
     "npm-which": "^3.0.1",
-    "semver": "^7.3.4",
-    "yargs": "^15.1.0"
+    "semver": "^7.3.5",
+    "yargs": "^17.0.1"
+  },
+  "devDependencies": {
+    "memfs": "^3.2.2"
   }
 }
