--- a/packages/carbon-react/package.json
+++ b/packages/carbon-react/package.json
@@ -2,7 +2,7 @@
   "name": "@carbon/react",
   "private": true,
   "description": "React components for the Carbon Design System",
-  "version": "0.4.0",
+  "version": "0.5.0-rc.0",
   "license": "Apache-2.0",
   "main": "lib/index.js",
   "module": "es/index.js",
@@ -42,10 +42,10 @@
   "dependencies": {
     "@carbon/feature-flags": "^0.5.0",
     "@carbon/icons-react": "^10.33.0",
-    "@carbon/styles": "^0.7.0",
+    "@carbon/styles": "^0.8.0-rc.0",
     "@carbon/telemetry": "0.0.0-alpha.6",
     "@ibm/plex": "6.0.0-next.6",
-    "carbon-components-react": "^7.36.0"
+    "carbon-components-react": "^7.37.0-rc.0"
   },
   "devDependencies": {
     "@babel/core": "^7.14.2",
@@ -55,7 +55,7 @@
     "@babel/plugin-transform-react-constant-elements": "^7.13.13",
     "@babel/preset-env": "^7.14.2",
     "@babel/preset-react": "^7.13.13",
-    "@carbon/styles": "^0.7.0",
+    "@carbon/styles": "^0.8.0-rc.0",
     "@carbon/themes": "^10.35.0",
     "@rollup/plugin-babel": "^5.3.0",
     "@rollup/plugin-commonjs": "^18.0.0",
