--- a/packages/elements/package.json
+++ b/packages/elements/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@carbon/elements",
   "description": "A collection of design elements in code for the IBM Design Language",
-  "version": "10.35.0",
+  "version": "10.36.0-rc.0",
   "license": "Apache-2.0",
   "main": "lib/index.js",
   "module": "es/index.js",
@@ -36,7 +36,7 @@
   },
   "dependencies": {
     "@carbon/colors": "^10.26.0",
-    "@carbon/grid": "^10.28.0",
+    "@carbon/grid": "^10.29.0-rc.0",
     "@carbon/icons": "^10.33.0",
     "@carbon/import-once": "^10.6.0",
     "@carbon/layout": "^10.25.0",
