chore(icons): update icon metadata (#8877)
Added metadata

--- a/packages/icons/icons.yml
+++ b/packages/icons/icons.yml
@@ -1544,15 +1544,24 @@
   sizes:
     - 32
 - name: bookmark--add
-  friendly_name: bookmark--add
-  aliases: []
+  friendly_name: Bookmark add
+  aliases: 
+    - flag
+    - marker
+    - operations
+    - bookmark
+    - plus
+    - add
   sizes:
     - 32
 - name: bookmark--filled
   friendly_name: Bookmark filled
   aliases:
-    - bookmark filled
+    - bookmark 
+    - filled
     - operations
+    - flag
+    - marker
   sizes:
     - 32
 - name: boolean
@@ -1649,8 +1658,10 @@
   sizes:
     - 32
 - name: breaking-change
-  friendly_name: breaking-change
-  aliases: []
+  friendly_name: Breaking change
+  aliases: 
+    - breaking
+    - change
   sizes:
     - 32
 - name: brightness-contrast
@@ -3811,33 +3822,50 @@
   sizes:
     - 32
 - name: connect--recursive
-  friendly_name: connect--recursive
-  aliases: []
+  friendly_name: Connect recursive
+  aliases: 
+    - connection
+    - recursive
   sizes:
     - 32
 - name: connect--source
-  friendly_name: connect--source
-  aliases: []
+  friendly_name: Connect source
+  aliases: 
+    - connection
+    - source
   sizes:
     - 32
 - name: connect--target
-  friendly_name: connect--target
-  aliases: []
+  friendly_name: Connect target
+  aliases: 
+    - connection
+    - target
   sizes:
     - 32
 - name: connection--receive
-  friendly_name: connection--receive
-  aliases: []
+  friendly_name: Connection receive
+  aliases: 
+    - connection
+    - receive
+    - incoming
+    - input
   sizes:
     - 32
 - name: connection--send
-  friendly_name: connection--send
-  aliases: []
+  friendly_name: Connection send
+  aliases: 
+    - connection
+    - send
+    - outgoing
+    - output
   sizes:
     - 32
 - name: connection--two-way
-  friendly_name: connection--two-way
-  aliases: []
+  friendly_name: Connection two-way
+  aliases: 
+    - connection
+    - input
+    - output
   sizes:
     - 32
 - name: connection-signal
@@ -3914,8 +3942,11 @@
   sizes:
     - 32
 - name: convert-to-cloud
-  friendly_name: convert-to-cloud
-  aliases: []
+  friendly_name: Convert to cloud
+  aliases: 
+    - convert
+    - push
+    - send
   sizes:
     - 32
 - name: copy
@@ -4647,8 +4678,17 @@
   sizes:
     - 32
 - name: delivery--add
-  friendly_name: delivery--add
-  aliases: []
+  friendly_name: Delivery add
+  aliases: 
+    - truck
+    - delivery
+    - transportation
+    - shopping
+    - van
+    - shipping
+    - ecommerce
+    - plus
+    - add
   sizes:
     - 32
 - name: delivery--parcel
@@ -6546,13 +6586,25 @@
     - folder
     - folder off
 - name: folder--open
-  friendly_name: folder--open
-  aliases: []
+  friendly_name: Folder open
+  aliases: 
+    - file
+    - save
+    - document
+    - organize
+    - folder
+    - folder open
   sizes:
     - 32
 - name: folder--parent
-  friendly_name: folder--parent
-  aliases: []
+  friendly_name: Folder parent
+  aliases: 
+    - file
+    - save
+    - document
+    - organize
+    - folder
+    - folder parent
   sizes:
     - 32
 - name: folder--shared
@@ -6834,43 +6886,74 @@
   sizes:
     - 32
 - name: glyph--caution
-  friendly_name: glyph--caution
-  aliases: []
+  friendly_name: Glyph caution
+  aliases: 
+    - caution
+    - warning
+    - triangle
+    - filled
   sizes:
     - glyph
 - name: glyph--caution-inverted
-  friendly_name: glyph--caution-inverted
-  aliases: []
+  friendly_name: Glyph caution inverted
+  aliases: 
+    - caution
+    - warning
+    - inverted 
+    - triangle
+    - filled
   sizes:
     - glyph
 - name: glyph--circle-fill
-  friendly_name: glyph--circle-fill
-  aliases: []
+  friendly_name: Glyph circle fill
+  aliases: 
+    - circle
+    - filled
+    - solid
+    - round
   sizes:
     - glyph
 - name: glyph--circle-stroke
-  friendly_name: glyph--circle-stroke
-  aliases: []
+  friendly_name: Glyph circle stroke
+  aliases: 
+    - stroke
+    - circle
+    - round
+    - outlined
   sizes:
     - glyph
 - name: glyph--critical
-  friendly_name: glyph--critical
-  aliases: []
+  friendly_name: Glyph critical
+  aliases: 
+    - critical
+    - warning
+    - caution
+    - slash
   sizes:
     - glyph
 - name: glyph--incomplete
-  friendly_name: glyph--incomplete
-  aliases: []
+  friendly_name: Glyph incomplete
+  aliases: 
+    - incomplete
+    - round
+    - half filled
+    - circle
   sizes:
     - glyph
 - name: glyph--square-fill
-  friendly_name: glyph--square-fill
-  aliases: []
+  friendly_name: Glyph square fill
+  aliases: 
+    - square
+    - filled
+    - box
   sizes:
     - glyph
 - name: glyph--undefined
-  friendly_name: glyph--undefined
-  aliases: []
+  friendly_name: Glyph undefined
+  aliases: 
+    - square
+    - filled
+    - diamond 
   sizes:
     - glyph
 - name: gradient
@@ -8293,7 +8376,12 @@
     - 32
 - name: lifesaver
   friendly_name: lifesaver
-  aliases: []
+  aliases: 
+    - life preserver
+    - help
+    - boating
+    - travel
+    - recreation
   sizes:
     - 32
 - name: light
@@ -8497,8 +8585,21 @@
   sizes:
     - 32
 - name: location--filled
-  friendly_name: location--filled
-  aliases: []
+  friendly_name: Location filled
+  aliases: 
+    - place
+    - locate
+    - gps
+    - destination
+    - map
+    - pin
+    - site
+    - area
+    - legend
+    - location
+    - hazard
+    - travel
+    - filled
   sizes:
     - 32
 - name: location--hazard
@@ -10757,8 +10858,13 @@
   sizes:
     - 32
 - name: parameter
-  friendly_name: parameter
-  aliases: []
+  friendly_name: Parameter
+  aliases: 
+    - parameter
+    - code
+    - snippet
+    - value
+    - data
   sizes:
     - 32
 - name: parent-child
@@ -12477,8 +12583,10 @@
   sizes:
     - 32
 - name: scan--disabled
-  friendly_name: scan--disabled
-  aliases: []
+  friendly_name: Scan disabled
+  aliases: 
+    - scan
+    - disabled
   sizes:
     - 32
 - name: scatter-matrix
@@ -12574,8 +12682,15 @@
     - 16
     - 32
 - name: search--locate
-  friendly_name: search--locate
-  aliases: []
+  friendly_name: Search locate
+  aliases: 
+    - find
+    - investigate
+    - explore
+    - look
+    - locate
+    - discover
+    - identify
   sizes:
     - 32
 - name: security
@@ -12601,8 +12716,13 @@
   sizes:
     - 32
 - name: select--window
-  friendly_name: select--window
-  aliases: []
+  friendly_name: Select window
+  aliases: 
+    - select
+    - formatting
+    - window
+    - pointer
+    - arrow
   sizes:
     - 32
 - name: send
@@ -14214,8 +14334,14 @@
     - alphabet
     - editor
 - name: text--font
-  friendly_name: text--font
-  aliases: []
+  friendly_name: Text font
+  aliases: 
+    - letter
+    - typography
+    - alphabet
+    - editor
+    - font
+    - typeface
   sizes:
     - 32
 - name: text--footnote
@@ -14481,8 +14607,14 @@
   sizes:
     - 32
 - name: thumbs-down--filled
-  friendly_name: thumbs-down--filled
-  aliases: []
+  friendly_name: Thumbs down filled
+  aliases: 
+    - dislike
+    - hand
+    - down vote
+    - 'no'
+    - disagree
+    - filled
   sizes:
     - 32
 - name: thumbs-up
@@ -14496,8 +14628,14 @@
   sizes:
     - 32
 - name: thumbs-up--filled
-  friendly_name: thumbs-up--filled
-  aliases: []
+  friendly_name: Thumbs up filled
+  aliases: 
+    - like
+    - hand
+    - up vote
+    - 'yes'
+    - agree
+    - filled
   sizes:
     - 32
 - name: thunderstorm
@@ -14633,18 +14771,42 @@
     - mobile
     - device
 - name: touch--1--filled
-  friendly_name: touch--1--filled
-  aliases: []
+  friendly_name: Touch 1 filled
+  aliases: 
+    - hand
+    - tap
+    - press
+    - click
+    - mobile
+    - device
+    - filled
   sizes:
     - 32
 - name: touch--1-down
-  friendly_name: touch--1-down
-  aliases: []
+  friendly_name: Touch 1 down
+  aliases: 
+    - hand
+    - tap
+    - depress
+    - click
+    - mobile
+    - device
+    - down
+    - hold
   sizes:
     - 32
 - name: touch--1-down--filled
-  friendly_name: touch--1-down--filled
-  aliases: []
+  friendly_name: Touch 1 down filled
+  aliases: 
+    - hand
+    - tap
+    - depress
+    - click
+    - mobile
+    - device
+    - down
+    - hold
+    - filled
   sizes:
     - 32
 - name: touch--2
@@ -14659,8 +14821,15 @@
     - mobile
     - device
 - name: touch--2--filled
-  friendly_name: touch--2--filled
-  aliases: []
+  friendly_name: Touch 2 filled
+  aliases: 
+    - hand
+    - tap
+    - press
+    - click
+    - mobile
+    - device
+    - filled
   sizes:
     - 32
 - name: touch--interaction
@@ -16166,8 +16335,14 @@
   sizes:
     - 32
 - name: zoom--fit
-  friendly_name: zoom--fit
-  aliases: []
+  friendly_name: Zoom fit
+  aliases: 
+    - expand
+    - inspect
+    - size
+    - enlarge
+    - detail
+    - fit
   sizes:
     - 32
 - name: zoom--in
