--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -1,7 +1,7 @@
 {
   "name": "carbon-components",
   "description": "The Carbon Design System is IBM’s open-source design system for products and experiences.",
-  "version": "10.37.0-rc.0",
+  "version": "10.37.0",
   "license": "Apache-2.0",
   "main": "umd/index.js",
   "module": "es/index.js",
@@ -81,7 +81,7 @@
     "@babel/preset-react": "^7.13.13",
     "@babel/runtime": "^7.14.0",
     "@carbon/cli": "^10.24.0",
-    "@carbon/elements": "^10.36.0-rc.0",
+    "@carbon/elements": "^10.36.0",
     "@carbon/icons-handlebars": "^10.33.0",
     "@carbon/icons-react": "^10.33.0",
     "@carbon/test-utils": "^10.16.0",
