--- a/packages/styles/package.json
+++ b/packages/styles/package.json
@@ -2,7 +2,7 @@
   "name": "@carbon/styles",
   "private": true,
   "description": "Styles for the Carbon Design System",
-  "version": "0.8.0-rc.0",
+  "version": "0.8.0",
   "license": "Apache-2.0",
   "repository": {
     "type": "git",
@@ -20,10 +20,10 @@
   "dependencies": {
     "@carbon/colors": "^10.26.0",
     "@carbon/feature-flags": "^0.5.0",
-    "@carbon/grid": "^10.29.0-rc.0",
+    "@carbon/grid": "^10.29.0",
     "@carbon/layout": "^10.25.0",
     "@carbon/motion": "^10.19.0",
-    "@carbon/themes": "^10.35.0",
+    "@carbon/themes": "^10.36.0",
     "@carbon/type": "^10.29.0"
   },
   "devDependencies": {
