fix(icon-build-helpers): update parser to replace \t sequences, include opacity (#8855)
* fix(icon-build-helpers): update parser to replace \t sequences

* chore(icon-build-helpers): remove debug statement

* fix(icon-build-helpers): update parser as opacity is ignored by svg-parser

* fix(icon-build-helpers): make sure data-icon-path is included

Co-authored-by: Scott Strubberg <sstrubberg@protonmail.com>

--- a/packages/icons/package.json
+++ b/packages/icons/package.json
@@ -41,5 +41,8 @@
     "@carbon/cli": "^10.24.0",
     "@carbon/icon-build-helpers": "^0.22.0",
     "rimraf": "^3.0.2"
+  },
+  "dependencies": {
+    "svgson": "^5.2.1"
   }
 }
