--- a/config/jest-config-carbon/package.json
+++ b/config/jest-config-carbon/package.json
@@ -34,7 +34,8 @@
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
     "enzyme-to-json": "^3.3.5",
-    "jest-circus": "^26.0.1"
+    "jest-circus": "^26.0.1",
+    "jest-watch-typeahead": "^0.6.4"
   },
   "devDependencies": {
     "react": "^17.0.1",
