--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "lint:styles": "stylelint '**/*.{css,scss}' --report-needless-disables --report-invalid-scope-disables",
     "sync": "carbon-cli sync",
     "test": "cross-env BABEL_ENV=test jest",
-    "test:e2e": "cross-env BABEL_ENV=test jest --testPathPattern='e2e/' --testPathIgnorePatterns='examples,/packages/components/,/packages/react/'"
+    "test:e2e": "cross-env BABEL_ENV=test jest -c jest.e2e.config.js"
   },
   "resolutions": {
     "ast-types": "^0.14.0",
@@ -139,19 +139,6 @@
   "stylelint": {
     "extends": [
       "./config/stylelint-config-carbon"
-    ]
-  },
-  "jest": {
-    "preset": "jest-config-carbon",
-    "collectCoverageFrom": [
-      "packages/**/src/**/*.js",
-      "!packages/{cli,components,sketch}/**",
-      "!packages/**/{examples,stories}/**",
-      "!**/*-story.js"
-    ],
-    "reporters": [
-      "default",
-      "jest-junit"
     ]
   }
 }
