--- a/config/jest-config-carbon/package.json
+++ b/config/jest-config-carbon/package.json
@@ -2,7 +2,7 @@
   "name": "jest-config-carbon",
   "private": true,
   "description": "Jest configuration and preset for Carbon",
-  "version": "0.4.0",
+  "version": "0.5.0-rc.0",
   "license": "Apache-2.0",
   "main": "index.js",
   "repository": {
