--- a/packages/colors/package.json
+++ b/packages/colors/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@carbon/colors",
   "description": "Colors for digital and software products using the Carbon Design System",
-  "version": "10.26.0",
+  "version": "10.27.0-rc.0",
   "license": "Apache-2.0",
   "main": "lib/index.js",
   "module": "es/index.js",
@@ -35,8 +35,8 @@
     "clean": "rimraf css es lib umd scss index.scss"
   },
   "devDependencies": {
-    "@carbon/cli": "^10.24.0",
-    "@carbon/cli-reporter": "^10.4.0",
+    "@carbon/cli": "^10.25.0-rc.0",
+    "@carbon/cli-reporter": "^10.5.0-rc.0",
     "@carbon/scss-generator": "^10.13.0",
     "@carbon/test-utils": "^10.16.0",
     "change-case": "^4.1.1",
