--- a/packages/icons/package.json
+++ b/packages/icons/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@carbon/icons",
   "description": "Icons for digital and software products using the Carbon Design System",
-  "version": "10.33.0",
+  "version": "10.34.0-rc.0",
   "license": "Apache-2.0",
   "main": "lib/index.js",
   "module": "es/index.js",
@@ -41,8 +41,8 @@
     "svgson": "^5.2.1"
   },
   "devDependencies": {
-    "@carbon/cli": "^10.24.0",
-    "@carbon/icon-build-helpers": "^0.22.0",
+    "@carbon/cli": "^10.25.0-rc.0",
+    "@carbon/icon-build-helpers": "^0.23.0-rc.0",
     "rimraf": "^3.0.2"
   }
 }
