--- a/packages/themes/package.json
+++ b/packages/themes/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@carbon/themes",
   "description": "Themes for applying color in the Carbon Design System",
-  "version": "10.36.0",
+  "version": "10.37.0-rc.0",
   "license": "Apache-2.0",
   "main": "lib/index.js",
   "module": "es/index.js",
@@ -29,14 +29,14 @@
     "build": "yarn clean && carbon-cli bundle src/index.js --name CarbonThemes && node tasks/build.js && carbon-cli check \"scss/*.scss\""
   },
   "dependencies": {
-    "@carbon/colors": "^10.26.0",
-    "@carbon/layout": "^10.25.0",
-    "@carbon/type": "^10.29.0",
+    "@carbon/colors": "^10.27.0-rc.0",
+    "@carbon/layout": "^10.26.0-rc.0",
+    "@carbon/type": "^10.30.0-rc.0",
     "color": "^3.1.2"
   },
   "devDependencies": {
-    "@carbon/cli": "^10.24.0",
-    "@carbon/cli-reporter": "^10.4.0",
+    "@carbon/cli": "^10.25.0-rc.0",
+    "@carbon/cli-reporter": "^10.5.0-rc.0",
     "@carbon/scss-generator": "^10.13.0",
     "@carbon/test-utils": "^10.16.0",
     "change-case": "^4.1.1",
