--- a/packages/icon-build-helpers/package.json
+++ b/packages/icon-build-helpers/package.json
@@ -2,7 +2,7 @@
   "name": "@carbon/icon-build-helpers",
   "private": true,
   "description": "Build helpers for the Carbon Design System icon library",
-  "version": "0.23.0-rc.0",
+  "version": "0.23.0",
   "license": "Apache-2.0",
   "main": "src/index.js",
   "repository": {
@@ -28,8 +28,8 @@
     "@babel/preset-react": "^7.13.13",
     "@babel/template": "^7.12.13",
     "@babel/types": "^7.14.2",
-    "@carbon/cli-reporter": "^10.5.0-rc.0",
-    "@carbon/icon-helpers": "^10.19.0-rc.0",
+    "@carbon/cli-reporter": "^10.5.0",
+    "@carbon/icon-helpers": "^10.19.0",
     "@rollup/plugin-babel": "^5.3.0",
     "@rollup/plugin-replace": "^2.4.2",
     "browserslist-config-carbon": "^10.6.1",
