--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@carbon/cli",
   "description": "Task automation for working with the Carbon Design System",
-  "version": "10.25.0-rc.0",
+  "version": "10.25.0",
   "license": "Apache-2.0",
   "bin": {
     "carbon-cli": "./bin/carbon-cli.js"
@@ -24,7 +24,7 @@
   },
   "dependencies": {
     "@babel/core": "^7.14.2",
-    "@carbon/cli-reporter": "^10.5.0-rc.0",
+    "@carbon/cli-reporter": "^10.5.0",
     "@octokit/plugin-retry": "^3.0.7",
     "@octokit/plugin-throttling": "^2.6.0",
     "@octokit/rest": "^16.28.1",
