--- a/packages/colors/package.json
+++ b/packages/colors/package.json
@@ -40,7 +40,6 @@
     "@carbon/scss-generator": "^10.13.0",
     "@carbon/test-utils": "^10.16.0",
     "change-case": "^4.1.1",
-    "core-js": "^3.6.5",
     "fs-extra": "^8.1.0",
     "node-sass": "^6.0.0",
     "rimraf": "^3.0.0"
@@ -50,5 +49,6 @@
     "name": "@carbon/colors",
     "sassDir": "scss",
     "needs": "^1.3.0"
-  }
+  },
+  "sideEffects": false
 }
