feat(eslint): add eslint-plugin-jest (#9077)
* feat(eslint): add eslint-plugin-jest

* chore(project): fix eslint violations

* feat(eslint): add no-alias-methods rule

* chore(project): fix eslint violations

* chore(project): fix eslint violations

* feat(eslint): add no-conditional-expect

* feat(eslint): add additional eslint-plugin-jest rules

* chore(project): fix eslint violations

* feat(eslint): add eslint-plugin-jest rules

* chore(project): fix eslint violations

* feat(eslint): add eslint-plugin-jest rules

* chore(project): fix eslint violations

* feat(eslint): add eslint-plugin-jest rules

* chore(project): fix eslint violations

* chore(project): fix eslint violations

Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

--- a/package.json
+++ b/package.json
@@ -133,7 +133,7 @@
   },
   "eslintConfig": {
     "extends": [
-      "carbon"
+      "eslint-config-carbon/internal"
     ]
   },
   "stylelint": {
