feat(icons): update glyph icon names (#9122)
* feat(icons): update glyph icon names

* test(e2e): update snapshots

--- a/packages/icons/categories.yml
+++ b/packages/icons/categories.yml
@@ -1118,13 +1118,21 @@ categories:
           - error--filled
           - error--outline
           - glyph--caution
+          - caution
           - glyph--caution-inverted
+          - caution-inverted
           - glyph--circle-fill
+          - circle-fill
           - glyph--circle-stroke
+          - circle-stroke
           - glyph--critical
+          - critical
           - glyph--incomplete
+          - incomplete
           - glyph--square-fill
+          - square-fill
           - glyph--undefined
+          - undefined
           - help
           - help--filled
           - in-progress
