--- a/packages/elements/package.json
+++ b/packages/elements/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@carbon/elements",
   "description": "A collection of design elements in code for the IBM Design Language",
-  "version": "10.38.0-rc.0",
+  "version": "10.38.0",
   "license": "Apache-2.0",
   "main": "lib/index.js",
   "module": "es/index.js",
@@ -35,14 +35,14 @@
     "clean": "rimraf es lib umd && node tasks/clean.js"
   },
   "dependencies": {
-    "@carbon/colors": "^10.28.0-rc.0",
-    "@carbon/grid": "^10.31.0-rc.0",
-    "@carbon/icons": "^10.35.0-rc.0",
+    "@carbon/colors": "^10.28.0",
+    "@carbon/grid": "^10.31.0",
+    "@carbon/icons": "^10.35.0",
     "@carbon/import-once": "^10.6.0",
-    "@carbon/layout": "^10.27.0-rc.0",
+    "@carbon/layout": "^10.27.0",
     "@carbon/motion": "^10.20.0",
-    "@carbon/themes": "^10.38.0-rc.0",
-    "@carbon/type": "^10.31.0-rc.0"
+    "@carbon/themes": "^10.38.0",
+    "@carbon/type": "^10.31.0"
   },
   "devDependencies": {
     "@carbon/cli": "^10.25.0",
