--- a/packages/styles/package.json
+++ b/packages/styles/package.json
@@ -2,7 +2,7 @@
   "name": "@carbon/styles",
   "private": true,
   "description": "Styles for the Carbon Design System",
-  "version": "0.10.0-rc.0",
+  "version": "0.10.0",
   "license": "Apache-2.0",
   "repository": {
     "type": "git",
@@ -18,13 +18,13 @@
     "react"
   ],
   "dependencies": {
-    "@carbon/colors": "^10.28.0-rc.0",
+    "@carbon/colors": "^10.28.0",
     "@carbon/feature-flags": "^0.5.0",
-    "@carbon/grid": "^10.31.0-rc.0",
-    "@carbon/layout": "^10.27.0-rc.0",
+    "@carbon/grid": "^10.31.0",
+    "@carbon/layout": "^10.27.0",
     "@carbon/motion": "^10.20.0",
-    "@carbon/themes": "^10.38.0-rc.0",
-    "@carbon/type": "^10.31.0-rc.0"
+    "@carbon/themes": "^10.38.0",
+    "@carbon/type": "^10.31.0"
   },
   "devDependencies": {
     "@carbon/test-utils": "^10.16.0"
