--- a/packages/type/package.json
+++ b/packages/type/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@carbon/type",
   "description": "Typography for digital and software products using the Carbon Design System",
-  "version": "10.31.0-rc.0",
+  "version": "10.31.0",
   "license": "Apache-2.0",
   "main": "lib/index.js",
   "module": "es/index.js",
@@ -37,7 +37,7 @@
   },
   "dependencies": {
     "@carbon/import-once": "^10.6.0",
-    "@carbon/layout": "^10.27.0-rc.0"
+    "@carbon/layout": "^10.27.0"
   },
   "devDependencies": {
     "@carbon/cli": "^10.25.0",
