--- a/packages/styles/package.json
+++ b/packages/styles/package.json
@@ -27,6 +27,7 @@
     "@carbon/type": "^10.31.0"
   },
   "devDependencies": {
-    "@carbon/test-utils": "^10.16.0"
+    "@carbon/test-utils": "^10.16.0",
+    "css": "^3.0.0"
   }
 }
