docs(toggle): add v11 migration guidance (#9167)

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -203,7 +203,8 @@
       "avatar_url": "https://avatars2.githubusercontent.com/u/28265588?v=4",
       "profile": "https://janhassel.de/",
       "contributions": [
-        "code"
+        "code",
+        "doc"
       ]
     },
     {
