--- a/packages/themes/package.json
+++ b/packages/themes/package.json
@@ -26,7 +26,7 @@
   "scripts": {
     "ci-check": "carbon-cli check \"scss/**/*.scss\" -i \"**/generated/**\"",
     "clean": "rimraf es lib umd scss/generated",
-    "build": "yarn clean && carbon-cli bundle src/index.js --name CarbonThemes && node tasks/build.js && carbon-cli check \"scss/*.scss\""
+    "build": "yarn clean && carbon-cli bundle src/index.js --name CarbonThemes && babel-node --presets '@babel/preset-env' tasks/build.js && carbon-cli check \"scss/*.scss\""
   },
   "dependencies": {
     "@carbon/colors": "^10.28.0",
@@ -35,6 +35,8 @@
     "color": "^3.1.2"
   },
   "devDependencies": {
+    "@babel/node": "^7.14.2",
+    "@babel/preset-env": "^7.14.2",
     "@carbon/cli": "^10.25.0",
     "@carbon/cli-reporter": "^10.5.0",
     "@carbon/scss-generator": "^10.13.0",
@@ -45,5 +47,6 @@
     "js-yaml": "^3.13.0",
     "node-sass": "^4.13.1",
     "rimraf": "^3.0.0"
-  }
+  },
+  "sideEffects": false
 }
