--- a/packages/feature-flags/package.json
+++ b/packages/feature-flags/package.json
@@ -33,16 +33,25 @@
     "watch": "yarn clean && node tasks/build.js && rollup -c -w"
   },
   "devDependencies": {
+    "@babel/core": "^7.14.6",
     "@babel/generator": "^7.14.5",
+    "@babel/preset-env": "^7.14.7",
     "@babel/template": "^7.14.5",
     "@babel/types": "^7.14.5",
     "@carbon/scss-generator": "^10.13.0",
+    "@rollup/plugin-babel": "^5.3.0",
+    "@rollup/plugin-node-resolve": "^13.0.0",
     "change-case": "^4.1.2",
     "fs-extra": "^9.0.1",
     "js-yaml": "^3.14.0",
     "rimraf": "^3.0.2",
     "rollup": "^2.46.0",
     "rollup-plugin-strip-banner": "^2.0.0"
+  },
+  "babel": {
+    "presets": [
+      "@babel/env"
+    ]
   },
   "sideEffects": false
 }
