feat(styles): add support for a compat theme  (#9235)
* feat(themes): add support for a compat theme

* feat(styles): add support for a compat theme

* refactor(styles): add support for compat theme

* chore(themes): update builder to ensure filepath

* chore(themes): ignore compat directory

* chore(cli): update cli to ignore compat dirs

* fix(styles): add support for compat in stylesheets

* test: update test for custom properties

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -67,7 +67,7 @@ jobs:
         run: yarn build --ignore '@carbon/sketch'
       - name: Check generated styles
         run: |
-          yarn carbon-cli check --ignore '**/@(node_modules|examples|components|react|fixtures)/**' 'packages/**/*.scss'
+          yarn carbon-cli check --ignore '**/@(node_modules|examples|components|react|fixtures|compat)/**' 'packages/**/*.scss'
       - name: Run tests
         run: yarn test --ci
 
