--- a/packages/styles/package.json
+++ b/packages/styles/package.json
@@ -24,7 +24,8 @@
     "@carbon/layout": "^10.28.0",
     "@carbon/motion": "^10.21.0",
     "@carbon/themes": "^10.39.0",
-    "@carbon/type": "^10.32.0"
+    "@carbon/type": "^10.32.0",
+    "@ibm/plex": "6.0.0-next.6"
   },
   "devDependencies": {
     "@carbon/test-utils": "^10.16.0",
