feat(carbon-react): add scss entrypoints (#9353)
* chore(carbon-react): add build-styles task

* feat(carbon-react): add scss entrypoints

Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

--- a/packages/carbon-react/package.json
+++ b/packages/carbon-react/package.json
@@ -70,6 +70,7 @@
     "babel-preset-carbon": "^0.1.0",
     "browserslist-config-carbon": "^10.6.1",
     "css-loader": "^5.2.4",
+    "fs-extra": "^10.0.0",
     "mini-css-extract-plugin": "^1.6.0",
     "postcss": "^8.2.14",
     "postcss-custom-properties": "^11.0.0",
