fix: add index.scss to npm files (#9385)

--- a/packages/grid/package.json
+++ b/packages/grid/package.json
@@ -11,7 +11,8 @@
   "bugs": "https://github.com/carbon-design-system/carbon/issues",
   "files": [
     "css",
-    "scss"
+    "scss",
+    "index.scss"
   ],
   "keywords": [
     "eyeglass-module",
