--- a/packages/themes/package.json
+++ b/packages/themes/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@carbon/themes",
   "description": "Themes for applying color in the Carbon Design System",
-  "version": "10.39.0",
+  "version": "10.40.0-rc.0",
   "license": "Apache-2.0",
   "main": "lib/index.js",
   "module": "es/index.js",
@@ -29,18 +29,18 @@
     "build": "yarn clean && carbon-cli bundle src/index.js --name CarbonThemes && babel-node --presets '@babel/preset-env' tasks/build.js && carbon-cli check \"scss/*.scss\""
   },
   "dependencies": {
-    "@carbon/colors": "^10.29.0",
-    "@carbon/layout": "^10.28.0",
-    "@carbon/type": "^10.32.0",
+    "@carbon/colors": "^10.30.0-rc.0",
+    "@carbon/layout": "^10.29.0-rc.0",
+    "@carbon/type": "^10.33.0-rc.0",
     "color": "^3.1.2"
   },
   "devDependencies": {
     "@babel/node": "^7.14.2",
     "@babel/preset-env": "^7.14.2",
-    "@carbon/cli": "^10.26.0",
+    "@carbon/cli": "^10.27.0-rc.0",
     "@carbon/cli-reporter": "^10.5.0",
     "@carbon/scss-generator": "^10.13.0",
-    "@carbon/test-utils": "^10.16.0",
+    "@carbon/test-utils": "^10.17.0-rc.0",
     "change-case": "^4.1.1",
     "core-js": "^3.6.5",
     "fs-extra": "^8.1.0",
