--- a/packages/styles/package.json
+++ b/packages/styles/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@carbon/styles",
   "description": "Styles for the Carbon Design System",
-  "version": "0.2.0-rc.0",
+  "version": "0.2.0",
   "license": "Apache-2.0",
   "repository": {
     "type": "git",
@@ -20,17 +20,17 @@
     "access": "public"
   },
   "dependencies": {
-    "@carbon/colors": "^10.30.0-rc.0",
-    "@carbon/feature-flags": "^0.6.0-rc.0",
-    "@carbon/grid": "^10.33.0-rc.0",
-    "@carbon/layout": "^10.29.0-rc.0",
-    "@carbon/motion": "^10.22.0-rc.0",
-    "@carbon/themes": "^10.40.0-rc.0",
-    "@carbon/type": "^10.33.0-rc.0",
+    "@carbon/colors": "^10.30.0",
+    "@carbon/feature-flags": "^0.6.0",
+    "@carbon/grid": "^10.33.0",
+    "@carbon/layout": "^10.29.0",
+    "@carbon/motion": "^10.22.0",
+    "@carbon/themes": "^10.40.0",
+    "@carbon/type": "^10.33.0",
     "@ibm/plex": "6.0.0-next.6"
   },
   "devDependencies": {
-    "@carbon/test-utils": "^10.17.0-rc.0",
+    "@carbon/test-utils": "^10.17.0",
     "css": "^3.0.0"
   }
 }
