docs: updated link to carbon documentation (#9467)
Co-authored-by: Andrea N. Cardona <andreancardona@gmail.com>

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -783,6 +783,15 @@
       "contributions": [
         "doc"
       ]
+    },
+    {
+      "login": "Kiittyka",
+      "name": "Krithika S Udupa",
+      "avatar_url": "https://avatars.githubusercontent.com/u/41021851?v=4",
+      "profile": "https://github.com/Kiittyka",
+      "contributions": [
+        "doc"
+      ]
     }
   ],
   "commitConvention": "none"
