--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -20,6 +20,7 @@ jobs:
             This issue has been closed because it has received no activity for
             14 days
           stale-issue-label: 'status: stale 🍞'
+          stale-pr-label: 'status: stale 🍞'
           days-before-stale: 7
           days-before-close: 7
           debug-only: true
